fix sticy nav desktop spacing

--- a/packages/assets/scss/02-molecules/_sticky-nav.scss
+++ b/packages/assets/scss/02-molecules/_sticky-nav.scss
@@ -179,7 +179,7 @@
     @media ($bp-medium-min) {
       border-top-width: 1px;
       border-top-style: solid;
-      padding-top: 12px;
+      padding-top: 0px;
     }
   }
 
